# rust-jsonrpc

./: .gitignore  Cargo.toml  README.md  local.properties
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: mod.rs
crates/libs/lib-auth/src/pwd/scheme/: hash.rs  mod.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/context/: app_context.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: mod.rs  user.rs
crates/libs/lib-core/src/model/store/: mod.rs  user.rs
crates/libs/lib-rpc-core/src/: error.rs  lib.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/app/: app.rs
crates/libs/lib-web/src/handlers/: admin.rs  handlers_login.rs  mod.rs  signup.rs
crates/libs/lib-web/src/middleware/: mod.rs  mw_auth.rs  mw_res_map.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
crates/tests/builder-macro/: Cargo.toml
crates/tests/builder-macro/src/: lib.rs
crates/tests/edu/: Cargo.toml
crates/tests/edu/src/: lib.rs
crates/tests/edu/src/basic/: hw.rs
crates/tests/edu/src/common/: customer.rs  error.rs  mod.rs  order.rs  order_processor.rs  storage.rs
crates/tests/edu/src/common/processors/: check_order_processor.rs  mod.rs  order_processor.rs
crates/tests/edu/src/func/: func_fn.rs  func_fn_l.rs  mod.rs  order.rs
crates/tests/edu/src/iter/: common.rs  map.rs  mod.rs  vec.rs
crates/tests/edu/src/macros/: add_all.rs  all_true.rs  expanded.rs  hw.rs  mod.rs  pancakes.rs
crates/tests/it/: Cargo.toml
crates/tests/it/src/: lib.rs
crates/tests/it/src/context/: context.rs  mod.rs  sql.rs
crates/tests/it/src/dev/: dev.rs  mod.rs
crates/tests/it/src/dev/auth/: dev.rs
crates/tests/it/src/temp/: mod.rs  once_cell.rs
crates/tests/it/src/utils/: body_utils.rs  defaults.rs  mod.rs
crates/tests/procedural-macro/: Cargo.toml
crates/tests/procedural-macro/src/: lib.rs
