[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    "crates/libs/lib-auth",
    "crates/libs/lib-core",
    "crates/libs/lib-web",
    # -- Application Services
    "crates/services/web-server",
    "crates/tests/it",
]

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3"] }
# -- Data
# Note: we lock modql version during rcs
modql = { version = "0.4.0", features = ["with-sea-query"]}
sqlx = { version = "0.7", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
sea-query = "0.31"
sea-query-binder = { version = "0.6", features = ["sqlx-postgres", "with-uuid", "with-time" ] }
# -- JSON-RPC
# Lock to specific version during 0.1.x
rpc-router = { version = "=0.1.3" }
# -- Others
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
