[package]
name = "it"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[features]
with-rpc = ["rpc-router"]

[dependencies]
# nils dependencies
axum = { version = "0.7", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
redis = "0.26.1"
postgres = "0.19.3"
tokio-postgres = "0.7.11"
java-properties = "2.0.0"
rust_decimal = { version = "1.36", features = ["db-postgres"] }
rust_decimal_macros = "1.36"


http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

testcontainers = "0.14.0"
tower = "0.5.1"



# -- App Libs
#lib-utils = { path = "../../libs/lib-utils"}
#lib-auth = { path = "../../libs/lib-auth"}
# -- Async
# -- Json
serde = { version = "1", features = ["derive"] }
serde_with = { workspace = true }
# -- Data
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
modql = { workspace = true }
# -- Tracing
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = { workspace = true }
derive_more = { workspace = true }

# -- Feature: with-rpc
rpc-router = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3"